Fix football 'v' alignment, remove liveblog follow debuging

--- a/ArticleTemplates/css/scss/partials/_article__header.scss
+++ b/ArticleTemplates/css/scss/partials/_article__header.scss
@@ -41,7 +41,6 @@
 
 	.article__alerts {
 		@include padding(0, 1, 1, 1);
-		background-color: red;
 	}
 
 	.article__review-rating {
