--- a/ArticleTemplates/css/style.css
+++ b/ArticleTemplates/css/style.css
@@ -416,8 +416,7 @@ html {
         font-size: 2.2rem;
         line-height: 3rem; } }
   .article__header .article__alerts {
-    padding: 0px 12px 12px 12px;
-    background-color: red; }
+    padding: 0px 12px 12px 12px; }
   .article__header .article__review-rating {
     color: #999999;
     padding: 0px 12px 18px 12px;
@@ -3082,7 +3081,8 @@ aside {
       border-top: 2px solid #4bc6df; }
     #football .football-tabs-stats .football-fixtures .football-match > div {
       display: inline-block;
-      margin-right: -4px; }
+      margin-right: -4px;
+      overflow: hidden; }
     #football .football-tabs-stats .football-fixtures .football-match.has-ended .football-match-status {
       font-weight: bold; }
     #football .football-tabs-stats .football-fixtures .football-match.is-live {
